# synthesizer

./: .gitignore  CMakeLists.txt  Makefile  Osc.cpp  Osc.hpp  README.md  Synth.cpp  Synth.hpp  compile_commands.json  constants.hpp  log  main.cpp  plot.py  synth  synthesizer.h  synthesizer.hpp
CircularBuffer/: CircularBuffer.hpp  CircularBufferMutex.hpp  Makefile  benchmark.cpp  main.cpp
UI_qml/VCO/: CMakeLists.txt  Main.qml  main.cpp
includes/: AudioModule.hpp  Envelope.hpp  Enveloppe.hpp  Mixer_4.hpp  Modulator.hpp  Osc.hpp  Synth.hpp  VCA.hpp  Vca.hpp  constants.hpp  synthesizer.hpp
src/: AudioModule.cpp  Envelope.cpp  Enveloppe.cpp  Mixer_4.cpp  Osc.cpp  Synth.cpp  Vca.cpp  main.cpp  mainQt.cpp
src/PC/: CMakeLists.txt  Patch.hpp  Synth.cpp  Synth.hpp  mainQt.cpp
src/PC/QtWrappers/: CMakeLists.txt  QtEnvWrapper.cpp  QtEnvWrapper.hpp  QtMixer4Wrapper.cpp  QtMixer4Wrapper.hpp  QtModuleWrapper.cpp  QtModuleWrapper.hpp  QtSynthWrapper.cpp  QtSynthWrapper.hpp  QtVcaWrapper.cpp  QtVcaWrapper.hpp  QtVcoWrapper.cpp  QtVcoWrapper.hpp  QtWrappers.hpp
src/PC/rtaudio/: config.status  librtaudio.la  librtaudio_la-RtAudio.lo  librtaudio_la-rtaudio_c.lo  libtool  rtaudio.pc
src/PC/rtaudio/.libs/: librtaudio.lai  librtaudio.so.8.0.0
src/PC/rtaudio/doc/: Doxyfile
src/PC/rtaudio/tests/: apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
src/PC/rtaudio/tests/.libs/: apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
src/PC/ui/: Env.qml  Jack.qml  Main.qml  Mixer4.qml  ModulesMenu.qml  Vca.qml  Vco.qml  cables.js
src/QtWrappers/: CMakeLists.txt  QtEnvWrapper.cpp  QtEnvWrapper.hpp  QtMixer4Wrapper.hpp  QtOscWrapper.cpp  QtOscWrapper.hpp  QtSynthWrapper.cpp  QtSynthWrapper.hpp  QtVcaWrapper.hpp
src/dsp/: CMakeLists.txt  Synth.cpp  Synth.hpp  constants.hpp  dsp.hpp
src/dsp/AudioModules/: AudioModule.cpp  AudioModule.hpp
src/dsp/AudioModules/Mixer_4/: Mixer_4.cpp  Mixer_4.hpp
src/dsp/AudioModules/Osc/: Osc.cpp  Osc.hpp
src/dsp/AudioModules/Vca/: Vca.cpp  Vca.hpp
src/dsp/AudioModules/Vco/: Vco.cpp  Vco.hpp
src/dsp/Modulators/: Modulator.cpp  Modulator.hpp
src/dsp/Modulators/Env/: Env.cpp  Env.hpp
src/dsp/Modulators/Envelope/: Envelope.cpp  Envelope.hpp
src/ui/: Env.qml  Jack.qml  Main.qml  Mixer4.qml  Osc.qml  OscPanel.qml  VCA.qml  VSlider.qml
